protocol fixes -- WIP Servux Task Info Hud Feedback / Task Requests